# demo-jupyter-wasm-widget

./: .gitignore  README.md  demo_jupyter_wasm_widget.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  webpack.config.js
demo_jupyter_wasm_widget/: __init__.py  widget.py
example/: demo.ipynb
ts/: extension.ts  plugin.ts  version.ts  widget.ts
ts/cpp/: wgpu_app.js
