[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "demo_jupyter_wasm_widget"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
authors = [
    { name = "Will Usher", email = "will@willusher.io" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
dependencies = [
    "ipywidgets>=8.0.0",
]
version = "0.1.0.dev0"

[project.urls]
Homepage = "https://github.com/Twinklebear/demo_jupyter_wasm_widget"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "demo_jupyter_wasm_widget/nbextension/*",
    "demo_jupyter_wasm_widget/nbextension*",
    "demo_jupyter_wasm_widget/labextension/*.tgz",
    "demo_jupyter_wasm_widget/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"demo_jupyter_wasm_widget/nbextension" = "share/jupyter/nbextensions/demo_jupyter_wasm_widget"
"demo_jupyter_wasm_widget/labextension" = "share/jupyter/labextensions/demo_jupyter_wasm_widget"
"./install.json" = "share/jupyter/labextensions/demo_jupyter_wasm_widget/install.json"
"./demo_jupyter_wasm_widget.json" = "etc/jupyter/nbconfig/notebook.d/demo_jupyter_wasm_widget.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "demo_jupyter_wasm_widget/nbextension/index.js",
    "demo_jupyter_wasm_widget/labextension/package.json",
]
skip-if-exists = [
    "demo_jupyter_wasm_widget/nbextension/index.js",
    "demo_jupyter_wasm_widget/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]

